Setting up ClaimDetails part2

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,7 +7,8 @@
 
 // Components
 @import "components/callout-auth";
+@import "components/claim";
 @import "components/container";
 @import "components/page-actions";
 @import "components/page-title";
-@import "components/claim";
+@import "components/status";
