Added create and update claims

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,6 +9,7 @@
 @import "components/callout-auth";
 @import "components/claim";
 @import "components/container";
+@import "components/controls";
 @import "components/page-actions";
 @import "components/page-title";
 @import "components/status";
