--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -10,3 +10,6 @@ $blue: #1779ba;
 // Navigation colors
 $hoover-background-color: #eeeeff;
 $subtext-color: #999;
+
+// Other
+$default-radius: 10px;
