--- a/app/styles/components/_container.scss
+++ b/app/styles/components/_container.scss
@@ -4,6 +4,10 @@
   border-radius: 10px;
   padding: 0;
   margin-bottom: 2rem;
+
+  .button {
+    border-radius: $default-radius;
+  }
 }
 
 .container__header {
