--- a/app/styles/components/_status.scss
+++ b/app/styles/components/_status.scss
@@ -1,10 +1,9 @@
 .status {
   border: 1px solid $light-blue-border;
-  border-radius: 10px;
+  border-radius: $default-radius;
   padding: 1rem;
   margin-bottom: 1rem;
   text-align: left;
-  font-size: 1.3rem;
 }
 
 .radio-label {
