--- a/app/styles/components/_callout-auth.scss
+++ b/app/styles/components/_callout-auth.scss
@@ -8,4 +8,16 @@
   h3, p {
     margin-bottom: 2rem;
   }
+
+  .button {
+    padding: 0.75rem ;
+  }
+
+  .button:first-child {
+    margin-right: 1.5rem;
+  }
+
+  .button {
+    border-radius: $default-radius;
+  }
 }
